style: Use Stream.toList()
Replaces usages of Stream.collect(Collectors.toList()) with the more concise Stream.toList() method where applicable.